[gd_scene load_steps=7 format=3 uid="uid://4yunhj0ofdlw"]

[ext_resource type="Script" uid="uid://fu0uekd7ortw" path="res://the_swimming_hole.gd" id="1_hp3fw"]
[ext_resource type="Texture2D" uid="uid://xx675ncqc64y" path="res://assets/sprites/backgrounds/bar-7682488_1280.png" id="2_s8jh8"]
[ext_resource type="AudioStream" uid="uid://qrvsioma41js" path="res://assets/sounds/ambience/431763__op_archive__tavern_interior_01.mp3" id="3_tx142"]
[ext_resource type="AudioStream" uid="uid://dcatvrqk10w8f" path="res://assets/sounds/ambience/91442__aguasonic__sherman_frogs_01_04mar2010.mp3" id="4_3j62m"]
[ext_resource type="PackedScene" uid="uid://nimh1bl6ma2t" path="res://HUDScene.tscn" id="5_3j62m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vgjg"]
texture = ExtResource("2_s8jh8")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hp3fw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vgjg")

[node name="dartsButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -181.0
offset_right = 128.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAY DARTS"

[node name="bullButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -133.0
offset_right = 128.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
text = "RIDE THE BULL"

[node name="drinkButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -85.0
offset_right = 128.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 2
text = "ORDER A DRINK"

[node name="talkButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -37.0
offset_right = 128.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "TALK TO GAY FROGS"

[node name="shopButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 11.0
offset_right = 128.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
text = "SHOP"

[node name="waitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 59.0
offset_right = 128.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
text = "WAIT"

[node name="leaveButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = 107.0
offset_right = 128.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
text = "LEAVE"

[node name="bar_ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_tx142")
volume_db = -10.306
autoplay = true
bus = &"Music"

[node name="bar_ambience2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3j62m")
autoplay = true
bus = &"Music"

[node name="HUDCONTROL" parent="." instance=ExtResource("5_3j62m")]
layout_mode = 1

[connection signal="pressed" from="Panel/dartsButton" to="." method="_on_darts_button_pressed"]
[connection signal="pressed" from="Panel/bullButton" to="." method="_on_bull_button_pressed"]
[connection signal="pressed" from="Panel/drinkButton" to="." method="_on_drink_button_pressed"]
[connection signal="pressed" from="Panel/talkButton" to="." method="_on_talk_button_pressed"]
[connection signal="pressed" from="Panel/shopButton" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="Panel/waitButton" to="." method="_on_wait_button_pressed"]
[connection signal="pressed" from="Panel/leaveButton" to="." method="_on_leave_button_pressed"]
